--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "FCC URL shortener project",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "node server.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -18,7 +19,10 @@
   "homepage": "https://github.com/rclong1221/FCC-URL-Shortener#readme",
   "dependencies": {
     "express": "^4.16.3",
-    "mocha": "^5.0.4",
-    "selenium-webdriver": "^4.0.0-alpha.1"
+    "mongoose": "^5.0.11",
+    "valid-url": "^1.0.9"
+  },
+  "devDependencies": {
+    "jest": "^22.4.3"
   }
 }
